<?xml version="1.0"?>
<package format="2">
  <name>autobot_base</name>
  <version>0.0.1</version>
  <description>
    Autobot robot driver
  </description>
  <license>Apache 2.0</license>
  <author email="nguyennhantinh@outlook.com">TinhNN</author>
  <maintainer email="nguyennhantinh@outlook.com">TinhNN</maintainer>
  <url type="repository">https://github.com/tinhnn/autobot_BSP_pi</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>
</package>
