<?xml version="1.0"?>
<package format="2">
  <name>autobot_bringup</name>
  <version>0.0.1</version>
  <description>
    roslaunch scripts for starting the Autobot
  </description>
  <license>Apache 2.0</license>
  <author email="nguyennhantinh@outlook.com">TinhNN</author>
  <maintainer email="nguyennhantinh@outlook.com">TinhNN</maintainer>
  <url type="repository">https://github.com/tinhnn/autobot_BSP_pi</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>autobot_msgs</depend>
  <exec_depend>autobot_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>hls_lfcd_lds_driver</exec_depend>
  <exec_depend>raspicam_node</exec_depend>
</package>
